# dirlock

./: Cargo.toml  LICENSE  PKGBUILD  README.md  atomic-update.conf  dirlock-sddm-helper  dirlock-sddm.service  dirlock.install  steamos-decrypt-home  steamos-enable-dirlock  steamos-encrypt-home  system-auth.example
data/: com.valvesoftware.Dirlock1.xml
dirlock/: Cargo.toml
dirlock/src/: cloner.rs  config.rs  convert.rs  crypto.rs  dbus_proxy.rs  inject.rs  kdf.rs  keystore.rs  lib.rs  modhex.rs  policy.rs  recovery.rs  systemd.rs  util.rs  xattrs.rs
dirlock/src/convert/: mod.rs  test.rs
dirlock/src/fscrypt/: error.rs  linux.rs  mod.rs
dirlock/src/protector/: fido2.rs  mod.rs  opts.rs  password.rs  policy.rs  tpm2.rs
fscrypt-rs/: Cargo.toml
fscrypt-rs/src/: convert.rs  keystore.rs  lib.rs
fscrypt-rs/src/fscrypt/: mod.rs
fscrypt-rs/src/protector/: mod.rs  password.rs  policy.rs
pam-dirlock/: Cargo.toml
pam-dirlock/src/: lib.rs  pamlib.rs
pam-fscryptrs/: Cargo.toml
pam-fscryptrs/src/: lib.rs
src/: config.rs  fscrypt.rs  lib.rs  linux.rs  main.rs  protector.rs  util.rs
src/fscrypt/: mod.rs
src/protector/: mod.rs  password.rs  policy.rs
