[package]
name = "fscrypt-rs"
version = "0.0.1"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["ioctl"] }
hex = "0.4"
argh = "0.1.12"
anyhow = "1.0.94"
bitflags = "2.6.0"
zeroize = "1.8.1"
num_enum = "0.7.3"
hkdf = "0.12.4"
sha2 = "0.10.8"
rand = "0.8.5"
ctr = "0.9.2"
aes = "0.8.4"
pbkdf2 = "0.12.2"
rpassword = "7.3.1"
serde = "1.0.217"
serde_json = "1.0.135"
base64 = "0.22.1"
homedir = { version = "0.3.4", default-features = false }
serde_with = { version = "3.12.0", features = ["base64", "hex"] }
hmac = "0.12.1"

[dev-dependencies]
tempdir = "0.3.7"
